[gd_scene load_steps=2 format=3 uid="uid://dalgl6j6hiw6w"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_gna7b"]

[node name="StartMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gna7b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Start Game"

[node name="LevelSelectButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Level Select"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
